--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -33,6 +33,36 @@
             font-weight: 500;
             align-items: center;
             font-family: 'Montserrat', sans-serif;
+            .user{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                cursor: pointer;
+                position: relative;
+
+                img{
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                    object-fit: cover;
+
+                }
+                .options{
+                    position: absolute;
+                    top: 50px;
+                    padding: 20px;
+                    background-color: white;
+                    border-radius: 10px;
+                    border: 1px solid lightgray;
+                    display: flex;
+                    flex-direction: column;
+                    gap:10px;
+                    color: black;
+                    width: 200px;
+                    font-weight: 300;
+                }
+
+            }
             button{
                 color: white;
                 padding: 10px 20px;
